--- a/JamesConsulting.Core/JamesConsulting.Core.csproj
+++ b/JamesConsulting.Core/JamesConsulting.Core.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <Version>1.0.0-beta</Version>
+    <Version>1.0.1-beta</Version>
     <Authors>Rudy James</Authors>
     <Company>James Consulting LLC</Company>
     <Copyright>Copyright © 2019. All rights reserved.</Copyright>
     <PackageProjectUrl></PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/jamesconsultingllc/JamesConsulting.Core/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/jamesconsultingllc/JamesConsulting.Core</RepositoryUrl>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
