Required license acceptance

--- a/JamesConsulting.Core/JamesConsulting.Core.csproj
+++ b/JamesConsulting.Core/JamesConsulting.Core.csproj
@@ -11,7 +11,7 @@
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
