--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   displayName: 'dotnet test'
   inputs:
     command: test
-    projects: '$(Parameters.projects)'
+    projects: '**/*.Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
