--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 variables:
   SonarKey: 'jamesconsultingllc_JamesConsulting.Core'
-
+  Version: '1.0.0-beta$(rev:.r)'
 trigger:
 - master
 
@@ -32,7 +32,14 @@ steps:
   inputs:
     command: test
     projects: '**/*.Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage" --nobuild'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'pack'
+    packagesToPack: '**/JamesConsulting.csproj'
+    nobuild: true
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: Version
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
   inputs:
