--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 variables:
   SonarKey: 'jamesconsultingllc_JamesConsulting.Core'
-  Version: '1.0.0-beta$(rev:.r)'
+  Version: '1.0.0-alpha1'
 trigger:
 - master
 
