--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -9,6 +9,7 @@
     <Copyright>Copyright (c) 2019 All Rights Reserved</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/jamesconsultingllc/JamesConsulting</RepositoryUrl>
+    <ProjectGuid>9F232F91-5328-4EE7-BC83-AB21CBA9C18B</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
