--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -18,6 +18,7 @@
     <PackageReference Condition="'$(TargetFramework)' == 'net461'" Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.6.0.16497" />
   </ItemGroup>
 
 </Project>
