--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -12,11 +12,16 @@
     <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
     <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <CodeAnalysisRuleSet>..\.sonarlint\james-consulting-corecsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\JamesConsulting.xml</DocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\.sonarlint\james-consulting-core\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MessagePack" Version="2.1.152" />
