--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -24,12 +24,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.1.152" />
+    <PackageReference Include="MessagePack" Version="2.2.85" />
     <PackageReference Condition="'$(TargetFramework)' == 'net461'" Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="PostSharp.Patterns.Common" Version="6.6.10" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.9.0.19135" />
+    <PackageReference Include="PostSharp.Patterns.Common" Version="6.8.9" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.19.0.28253">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 </Project>
