Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,13 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-- task: SonarQubePrepare@4
+- task: SonarCloudPrepare@1
   inputs:
-    SonarQube: 'My SonarQube'
+    SonarCloud: 'James Consulting'
+    organization: 'james-consulting-llc'
     scannerMode: 'MSBuild'
-    projectKey: 'James-Consulting-Core'
+    projectKey: 'jamesconsultingllc_JamesConsulting.Core'
+    projectVersion: '2.0'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
@@ -41,8 +43,8 @@ steps:
     versioningScheme: 'byEnvVar'
     versionEnvVar: Version
     arguments: '--configuration $(buildConfiguration)'
-- task: SonarQubeAnalyze@4
-- task: SonarQubePublish@4
+- task: SonarCloudAnalyze@1
+- task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
 - task: CopyFiles@2
