--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -13,6 +13,7 @@
     <Nullable>enable</Nullable>
     <TargetFrameworks>net461;net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
     <CodeAnalysisRuleSet>..\.sonarlint\james-consulting-corecsharp.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
