Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,22 @@ steps:
       projectKey: '$(SonarKey)'
       projectVersion: '2.0'
   - task: UseDotNet@2
-    displayName: 'Use .NET Core sdk'
+    displayName: ".NET Core 3.1.x"
     inputs:
+      version: "3.1.x"
       packageType: sdk
-      version: 3.1.402
-      installationPath: $(Agent.ToolsDirectory)/dotnet
+
+  - task: UseDotNet@2
+    displayName: ".NET 5.0.x"
+    inputs:
+      version: "5.0.x"
+      packageType: sdk
+
+  - task: UseDotNet@2
+    displayName: ".NET 6.x"
+    inputs:
+      version: "6.x"
+      packageType: sdk
   - task: DotNetCoreCLI@2
     inputs:
       command: 'restore'
