Removed .net5 support

--- a/JamesConsulting.Tests/JamesConsulting.Tests.csproj
+++ b/JamesConsulting.Tests/JamesConsulting.Tests.csproj
@@ -5,7 +5,7 @@
     <IsPackable>false</IsPackable>
     <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
-    <TargetFrameworks>net461;net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net461;net6.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
