--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -1,51 +1,41 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <PackageId>JamesConsulting</PackageId>
     <Authors>Rudy James</Authors>
     <Company>James Consulting LLC</Company>
     <Product>James Consulting Core Library</Product>
-    <Copyright>Copyright (c) 2020 - 2022 All Rights Reserved</Copyright>
+    <Copyright>Copyright (c) 2020 - 2024 All Rights Reserved</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/jamesconsultingllc/JamesConsulting</RepositoryUrl>
     <ProjectGuid>9F232F91-5328-4EE7-BC83-AB21CBA9C18B</ProjectGuid>
     <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
-    <TargetFrameworks>net462;net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <CodeAnalysisRuleSet>..\.sonarlint\james-consulting-corecsharp.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\JamesConsulting.xml</DocumentationFile>
   </PropertyGroup>
-
   <PropertyGroup>
-    <VersionMajor>1</VersionMajor>
+    <VersionMajor>2</VersionMajor>
     <VersionMinor>0</VersionMinor>
-    <VersionBuild>1</VersionBuild>
+    <VersionBuild>0</VersionBuild>
   </PropertyGroup>
-
   <PropertyGroup>
     <VersionPrefix Condition=" '$(BUILD_BUILDNUMBER)' == '' ">$(VersionMajor).$(VersionMinor).$(VersionBuild)-local</VersionPrefix>
     <VersionPrefix Condition=" '$(BUILD_BUILDNUMBER)' != '' And '$(Configuration)' == 'Debug'">$(VersionMajor).$(VersionMinor).$(VersionBuild)-$(BUILD_BUILDNUMBER)-preview</VersionPrefix>
     <VersionPrefix Condition=" '$(Configuration)' != 'Debug'">$(VersionMajor).$(VersionMinor).$(VersionBuild)</VersionPrefix>
   </PropertyGroup>
-  
   <ItemGroup>
     <AdditionalFiles Include="..\.sonarlint\james-consulting-core\CSharp\SonarLint.xml" Link="SonarLint.xml" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.4.35" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net461'" Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PostSharp.Patterns.Common" Version="6.10.14" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.43.0.51858">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Metalama.Framework" Version="2024.1.14" />
+    <PackageReference Include="Metalama.Migration" Version="2024.1.14" />
+    <PackageReference Include="Metalama.Patterns.Contracts" Version="2024.1.14" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 </Project>
