--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
       command: 'build'
       projects: 'JamesConsulting.sln'
       versioningScheme: byBuildNumber
-      arguments: '--configuration $(buildConfiguration) --no-restore'
+      arguments: '--configuration $(buildConfiguration) --no-restore -p MetalamaLicense=$(MetalamaLicense)'
   - task: DotNetCoreCLI@2
     displayName: 'dotnet test'
     inputs:
