--- a/JamesConsulting/JamesConsulting.csproj
+++ b/JamesConsulting/JamesConsulting.csproj
@@ -33,6 +33,8 @@
   </PropertyGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\.sonarlint\james-consulting-core\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+    <EditorConfigFiles Remove="stylecop.json" />
+    <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Metalama.Framework" Version="2024.1.14" />
@@ -40,6 +42,12 @@
     <PackageReference Include="Metalama.Patterns.Contracts" Version="2024.1.14" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Utf8Json" Version="1.3.7" />
+  </ItemGroup>
+  <ItemGroup>
   </ItemGroup>
 </Project>
